--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
     <Button
@@ -10,5 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="重启微信" />
+    <Button
+        android:id="@+id/reboot_current"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="重启当前应用" />
 
 </LinearLayout>
